--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 										<!-- <p>Just an incredibly simple responsive site<br /> -->
 										<!-- template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 									</header>
-									<p>I am a research scientist at <a href="https://ai.google/">Google Research</a>. My research interests span 3D/4D computer vision, inverse graphics, and image-based rendering, epsically for images and videos in the wild.
+									<p>I am a research scientist at <a href="https://ai.google/">Google Research</a>. My research interests span 3D/4D computer vision, epsically for images and videos in the wild.
 
-									<br><br>I received my CS Ph.D. degree at Cornell Tech and Cornell University where I am advised by <a href="http://www.cs.cornell.edu/~snavely/"> Prof. Noah Snavely </a>. I received my Bachelor of Computer Engineering with High Distinction at University of Minnesota, Twin Cities where I was advised by <a href="https://www-users.cs.umn.edu/~stergios/">Prof. Stergios Roumeliotis</a> and was a research assistant at <a href=" http://mars.cs.umn.edu">MARS Lab</a> and <a href = "https://developers.google.com/ar/"> Google Project Tango (now ARCore)</a>. I was also a member of </a href="http://rsn.cs.umn.edu/index.php/Main_Page">Robotic Sensor Networks (RSN) Lab</a> where I worked closely with <a href="https://www-users.cs.umn.edu/~isler/">Prof. Volkan Isler</a>. 
+									<br><br>I received my CS Ph.D. degree at Cornell University where I was advised by <a href="http://www.cs.cornell.edu/~snavely/"> Prof. Noah Snavely </a>. I received my Bachelor of Computer Engineering with High Distinction at University of Minnesota, Twin Cities where I was advised by <a href="https://www-users.cs.umn.edu/~stergios/">Prof. Stergios Roumeliotis</a> and was a research assistant at <a href=" http://mars.cs.umn.edu">MARS Lab</a> and <a href = "https://developers.google.com/ar/"> Google Project Tango (now ARCore)</a>. I was also a member of </a href="http://rsn.cs.umn.edu/index.php/Main_Page">Robotic Sensor Networks (RSN) Lab</a> where I worked closely with <a href="https://www-users.cs.umn.edu/~isler/">Prof. Volkan Isler</a>. 
 
 									<br><br>I am a recipient of the <a href="https://youtu.be/wytULli6Xaw?t=1m40s">CVPR 2019 Best Paper Hornorable Mention</a>, <a href="https://research.google/outreach/phd-fellowship/recipients/">2020 Google Ph.D. Fellowship</a>, <a href="https://adoberesearch.ctlprojects.com/fellowship/previous-fellowship-award-winners/">2020 Adobe Research Fellowship</a>, and <a href="https://mp.weixin.qq.com/s/v7ITiZXOJiDUbPlRlcqQRA">2021 Baidu Global Top 100 Chinese Rising Stars in AI</a>.
 
@@ -65,6 +65,8 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
+								<li>One paper was conditinally accepted to SIGGRAPH, 2022.</strong></li>
+								<li>Three paper were accepted to CVPR, 2022.</strong></li>
 								<li>Our paper on dynamic scenes space-time view synthesis was accepted to CVPR, 2021.</strong></li>
 								<li>I received 2020 Google PhD Fellowship. Thanks Google!</strong></li>
 								<li>Our paper on Crowdsampling the Plenoptic Function was accepted to ECCV, 2020 and was selected as <strong> Oral Presentation</strong>.</li>
