--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
-								<li>One paper was conditinally accepted to SIGGRAPH, 2022.</strong></li>
+								<li>One paper was accepted to SIGGRAPH, 2022.</strong></li>
 								<li>Three paper were accepted to CVPR, 2022.</strong></li>
 								<li>Our paper on dynamic scenes space-time view synthesis was accepted to CVPR, 2021.</strong></li>
 								<li>I received 2020 Google PhD Fellowship. Thanks Google!</strong></li>
@@ -88,6 +88,56 @@
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="NR-W.gif" alt="" /></a>
+											<div class="inner">
+												<h4>Neural 3D Reconstruction in the Wild</h4>
+												<a> Jiaming Sun, Xi Chen, Qianqian Wang, Zhengqi Li, Hadar Averbuch-Elor, Xiaowei Zhou, Noah Snavely </a> <br>
+												<a>In SIGGRAPH 2022 (Conference Proceedings)</a>
+												<br>
+												[<a href="https://arxiv.org/abs/2205.12955">paper</a>]
+												[<a href="https://zju3dv.github.io/neuralrecon-w/">www</a>]
+											</div>
+										</article>
+
+										<article>
+											<a href="#" class="image"><img src="3DM.gif" alt="" /></a>
+											<div class="inner">
+												<h4>3D Moments from Near-Duplicate Photos</h4>
+												<a> Qianqian Wang, Zhengqi Li, David Salesin, Noah SnavelY, Brian Curless, Janne Kontkanen </a> <br>
+												<a>In CVPR, 2022</a>
+												<br>
+												[<a href="https://arxiv.org/abs/2205.06255">paper</a>]
+												[<a href="https://3d-moments.github.io/">www</a>]
+											</div>
+										</article>
+
+										<article>
+											<a href="#" class="image"><img src="ds.gif" alt="" /></a>
+											<div class="inner">
+												<h4>Deformable Sprites for Unsupervised Video Decomposition</h4>
+												<a> Vickie Ye, Zhengqi Li, Richard Tucker, Angjoo Kanazawa, Noah Snavely</a> <br>
+												<a>In CVPR, 2022 (<b>Oral</b>) </a>
+												<br>
+												[<a href="https://arxiv.org/abs/2204.07151">paper</a>]
+												[<a href="https://deformable-sprites.github.io/">www</a>]
+											</div>
+										</article>
+
+
+										<article>
+											<a href="#" class="image"><img src="iron.gif" alt="" /></a>
+											<div class="inner">
+												<h4>IRON: Inverse Rendering by Optimizing Neural SDFs and Materials from Photometric Images</h4>
+												<a> Kai Zhang, Fujun Luan, Zhengqi Li, Noah Snavely</a> <br>
+												<a>In CVPR, 2022 (<b>Oral</b>) </a>
+												<br>
+												[<a href="https://arxiv.org/abs/2204.02232">paper</a>]
+												[<a href="https://kai-46.github.io/IRON-website/">www</a>]
+											</div>
+										</article>
+
+
+										<article>
 											<a href="#" class="image"><img src="teaser.gif" alt="" /></a>
 											<div class="inner">
 												<h4>Neural Scene Flow Fields for Space-Time View Synthesis of Dynamic Scenes</h4>
@@ -96,7 +146,8 @@
 												<br>
 												[<a href="https://arxiv.org/abs/2011.13084">paper</a>]
 												[<a href="http://www.cs.cornell.edu/~zl548/NSFF//">www</a>]
-										</div>
+											</div>
+										</article>
 
 										<article>
 											<a href="#" class="image"><img src="https://www.cs.cornell.edu/~wenqixian/images/fulls/trevi_teaser.gif" alt="" /></a>
