--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 									<h3>Publications/Technical Reports</h3>
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 									<div class="features">
-										<article>
-											<a href="#" class="image"><img src="NR-W.gif" alt="" /></a>
+										<!-- <article> -->
+			<!-- 								<a href="#" class="image"><img src="NR-W.gif" alt="" /></a>
 											<div class="inner">
 												<h4>Neural 3D Reconstruction in the Wild</h4>
 												<a> Jiaming Sun, Xi Chen, Qianqian Wang, Zhengqi Li, Hadar Averbuch-Elor, Xiaowei Zhou, Noah Snavely </a> <br>
@@ -97,7 +97,7 @@
 												[<a href="https://arxiv.org/abs/2205.12955">paper</a>]
 												[<a href="https://zju3dv.github.io/neuralrecon-w/">www</a>]
 											</div>
-										</article>
+										</article> -->
 
 										<article>
 											<a href="#" class="image"><img src="3DM.gif" alt="" /></a>
