--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
 									<h3>Publications/Technical Reports</h3>
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 									<div class="features">
-										<!-- <article> -->
-			<!-- 								<a href="#" class="image"><img src="NR-W.gif" alt="" /></a>
+										<article>
+											<a href="#" class="image">
+											<video  width=100% height=100% muted autoplay loop>
+											<source src="NR-W.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
 											<div class="inner">
 												<h4>Neural 3D Reconstruction in the Wild</h4>
 												<a> Jiaming Sun, Xi Chen, Qianqian Wang, Zhengqi Li, Hadar Averbuch-Elor, Xiaowei Zhou, Noah Snavely </a> <br>
@@ -97,10 +101,14 @@
 												[<a href="https://arxiv.org/abs/2205.12955">paper</a>]
 												[<a href="https://zju3dv.github.io/neuralrecon-w/">www</a>]
 											</div>
-										</article> -->
+										</article>
 
 										<article>
-											<a href="#" class="image"><img src="3DM.gif" alt="" /></a>
+											<a href="#" class="image">
+											<video  width=100% height=100% muted autoplay loop>
+											<source src="3DM.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
 											<div class="inner">
 												<h4>3D Moments from Near-Duplicate Photos</h4>
 												<a> Qianqian Wang, Zhengqi Li, David Salesin, Noah SnavelY, Brian Curless, Janne Kontkanen </a> <br>
@@ -112,7 +120,11 @@
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="ds.gif" alt="" /></a>
+											<a href="#" class="image">
+											<video  width=100% height=100% muted autoplay loop>
+											<source src="ds.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
 											<div class="inner">
 												<h4>Deformable Sprites for Unsupervised Video Decomposition</h4>
 												<a> Vickie Ye, Zhengqi Li, Richard Tucker, Angjoo Kanazawa, Noah Snavely</a> <br>
@@ -125,7 +137,13 @@
 
 
 										<article>
-											<a href="#" class="image"><img src="iron.gif" alt="" /></a>
+											<!-- <a href="#" class="image"> -->
+											<a href="#" class="image">
+											<video  width=100% height=100% muted autoplay loop>
+											<source src="iron.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+
 											<div class="inner">
 												<h4>IRON: Inverse Rendering by Optimizing Neural SDFs and Materials from Photometric Images</h4>
 												<a> Kai Zhang, Fujun Luan, Zhengqi Li, Noah Snavely</a> <br>
