--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           									</video></a>
 											<div class="inner">
 												<h4>3D Moments from Near-Duplicate Photos</h4>
-												<a> Qianqian Wang, Zhengqi Li, David Salesin, Noah SnavelY, Brian Curless, Janne Kontkanen </a> <br>
+												<a> Qianqian Wang, Zhengqi Li, David Salesin, Noah Snavely, Brian Curless, Janne Kontkanen </a> <br>
 												<a>In CVPR, 2022</a>
 												<br>
 												[<a href="https://arxiv.org/abs/2205.06255">paper</a>]
