--- a/index.html
+++ b/index.html
@@ -65,18 +65,17 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
+								<li>Two paper was accepted to ECCV, 2022. One of them was selected as Oral Presentation</strong></li>
 								<li>One paper was accepted to SIGGRAPH, 2022.</strong></li>
-								<li>Three paper were accepted to CVPR, 2022.</strong></li>
+								<li>Three paper were accepted to CVPR, 2022. Two of them were selected as Oral Presentation</strong></li>
 								<li>Our paper on dynamic scenes space-time view synthesis was accepted to CVPR, 2021.</strong></li>
 								<li>I received 2020 Google PhD Fellowship. Thanks Google!</strong></li>
-								<li>Our paper on Crowdsampling the Plenoptic Function was accepted to ECCV, 2020 and was selected as <strong> Oral Presentation</strong>.</li>
+								<li>Our paper on Crowdsampling the Plenoptic Function was accepted to ECCV, 2020 and was selected as Oral Presentation.</li>
 								<li>Our extended paper on learning depth of moving people was accepted to TPAMI.</li>
 								<li>I received 2020 Adobe Research Fellowship (10 selected worldwide). Thanks Adobe!</strong></li>
 								<li>Our paper on geometry aware camera orientation estimation was accepted to ICCV, 2019. </strong></li>
-								<li>Our paper on learning the depth of dynamic scene with moving people was accepted to CVPR, 2019  (received 3 strong accepts reviews) and <strong> was selected as Best Paper Honorable Mention! </strong></li>
-								<!-- <li>I will be a research intern at Facebook in summer 2019.</li> -->
+								<li>Our paper on learning the depth of dynamic scene with moving people was accepted to CVPR, 2019 and <strong> was selected as Best Paper Honorable Mention! </strong></li>
 								<li>Our paper on learning intrinsic image decompostion from CGIntrinsics was accepted to ECCV, 2018.</li>
-								<!-- <li>I will be an intern at Google AI Research, Cambridge in summer 2018.</li> -->
 								<li>Our paper on unsupervised learning intrinsic image decomposition was accepted to CVPR, 2018 and was selcted for a spolight oral.</li>
 								<li>Our paper on learning single-view depth prediction from Internet photos was accepted to CVPR, 2018</li>
 								</div>
@@ -86,6 +85,41 @@
 								<div class="container">
 									<h3>Publications/Technical Reports</h3>
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
+									<div class="features">
+										<article>
+											<a href="#" class="image">
+											<video  width=100% height=100% muted autoplay loop>
+											<source src="inz.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>InfiniteNature-Zero: Learning Perpetual View Generation of Natural Scenes from Single Images</h4>
+												<a> Zhengqi Li, Qianqian Wang, Noah Snavely, Angjoo Kanazawa </a> <br>
+												<a>In ECCV 2022 (<b>Oral</b>)</a>
+												<br>
+												<!-- [<a href="https://arxiv.org/abs/2205.12955">paper</a>] -->
+												[<a href="https://infinite-nature-zero.github.io/">www</a>]
+											</div>
+										</article>
+
+									<div class="features">
+										<article>
+											<a href="#" class="image">
+											<video  width=100% height=100% muted autoplay loop>
+											<source src="camel.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Structure and Motion for Casual Videos</h4>
+												<a> Zhoutong Zhang, Forrester Cole, Zhengqi Li, Michael Rubinstein, Noah Snavely, William T. Freeman </a> <br>
+												<a>In ECCV 2022 </a>
+												<!-- <br> -->
+												<!-- [<a href="https://arxiv.org/abs/2205.12955">paper</a>] -->
+												<!-- [<a href="https://zju3dv.github.io/neuralrecon-w/">www</a>] -->
+											</div>
+										</article>
+
+
 									<div class="features">
 										<article>
 											<a href="#" class="image">
