--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									</header>
 									<p>I am a research scientist at <a href="https://ai.google/">Google Research</a>. My research interests span 3D/4D computer vision, image-based rendering and computational photography, epsically for images and videos in the wild.
 
-									<br><br>I received my CS Ph.D. degree at Cornell University where I was advised by <a href="http://www.cs.cornell.edu/~snavely/"> Prof. Noah Snavely </a>.  I am a recipient of the <a href="https://youtu.be/wytULli6Xaw?t=1m40s">CVPR 2019 Best Paper Hornorable Mention</a>, <a href="https://research.google/outreach/phd-fellowship/recipients/">2020 Google Ph.D. Fellowship</a>, <a href="https://adoberesearch.ctlprojects.com/fellowship/previous-fellowship-award-winners/">2020 Adobe Research Fellowship</a>, <a href="https://mp.weixin.qq.com/s/v7ITiZXOJiDUbPlRlcqQRA">2021 Baidu Global Top 100 Chinese Rising Stars in AI</a>, and <a href="">2023 CVPR Best Paper Award Candidate</a>.
+									<br><br>I received my CS Ph.D. degree at Cornell University where I was advised by <a href="http://www.cs.cornell.edu/~snavely/"> Prof. Noah Snavely </a>.  I am a recipient of the <a href="https://youtu.be/wytULli6Xaw?t=1m40s">CVPR 2019 Best Paper Hornorable Mention</a>, <a href="https://research.google/outreach/phd-fellowship/recipients/">2020 Google Ph.D. Fellowship</a>, <a href="https://adoberesearch.ctlprojects.com/fellowship/previous-fellowship-award-winners/">2020 Adobe Research Fellowship</a>, <a href="https://mp.weixin.qq.com/s/v7ITiZXOJiDUbPlRlcqQRA">2021 Baidu Global Top 100 Chinese Rising Stars in AI</a>, and <a href="">CVPR 2023 Best Paper Honorable Mention Award</a>.
 
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 								</div>
@@ -63,7 +63,7 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
-								<li>Three paper was accepted to CVPR, 2023. DynIBaR was selected as Award Candiate</strong></li>
+								<li>Three paper was accepted to CVPR, 2023. DynIBaR was selected as Best Paper Honorable Mention</li>
 								<li>Two paper was accepted to ECCV, 2022. One of them was selected as Oral Presentation</strong></li>
 								<li>One paper was accepted to SIGGRAPH, 2022.</strong></li>
 								<li>Three paper were accepted to CVPR, 2022. Two of them were selected as Oral Presentation</strong></li>
@@ -94,7 +94,7 @@
 											<div class="inner">
 												<h4>DynIBaR: Neural Dynamic Image-Based Rendering</h4>
 												<a> Zhengqi Li, Qianqian Wang, Forrester Cole, Richard Tucker, Noah Snavely </a> <br>
-												<a>In CVPR 2023 (<b>Best Paper Award Candiate</b>)</a>
+												<a>In CVPR 2023 (<b>Best Paper Honorable Mention</b>)</a>
 												<br>
 												<!-- [<a href="https://arxiv.org/abs/2205.12955">paper</a>] -->
 												[<a href="https://dynibar.github.io/">www</a>]
