--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 				<footer>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/zhengqi-li-2b1892b2/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<!-- <li><a href="https://www.facebook.com/" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+						<li><a href="https://scholar.google.com/citations?user=QLW0lzcAAAAJ&hl=en" class="icon fa-google"><span class="label">Google Scholar</span></a></li>
 						<li><a href="https://github.com/zhengqili" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:zl548@cornell.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:zhengqili@google.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -63,6 +63,7 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
+								<li>One paper was accepted to ICCV, 2023 and selected as Oral Presentation.</li>
 								<li>Three paper was accepted to CVPR, 2023. DynIBaR was selected as Best Paper Honorable Mention</li>
 								<li>Two paper was accepted to ECCV, 2022. One of them was selected as Oral Presentation</strong></li>
 								<li>One paper was accepted to SIGGRAPH, 2022.</strong></li>
@@ -88,7 +89,24 @@
 										<article>
 											<a href="#" class="image">
 											<video  width=90% height=90% muted autoplay loop>
-											<source src="mom-spin.mp4" type="video/mp4">
+											<source src="videos/swing_tire.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Tracking Everything Everywhere All at Once</h4>
+												<a> Qianqian Wang, Yen-Yu Chang, Ruojin Cai, Zhengqi Li, Bharath Hariharan, Aleksander Holynski, Noah Snavely </a> <br>
+												<a>In ICCV 2023 (<b>Oral</b>)</a>
+												<br>
+												<!-- [<a href="https://arxiv.org/abs/2205.12955">paper</a>] -->
+												[<a href="https://omnimotion.github.io/">www</a>]
+											</div>
+										</article>
+
+									<div class="features">
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/mom-spin.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
 											<div class="inner">
@@ -105,7 +123,7 @@
 										<article>
 											<a href="#" class="image">
 											<video  width=90% height=90% muted autoplay loop>
-											<source src="persistent-nature.mp4" type="video/mp4">
+											<source src="videos/persistent-nature.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
 											<div class="inner">
@@ -119,27 +137,22 @@
 
 									<div class="features">
 										<article>
-											<a href="#" class="image">
-											<video  width=100% height=100% muted autoplay loop>
-											<source src="" type="video/mp4">
-									        Your browser does not support the video tag.
-          									</video></a>
+											<a href="#" class="image"><img src="images/omini3d.png" alt="" /></a>
 											<div class="inner">
-												<h4>Associating Objects and their Effects in Unconstrained Monocular Video</h4>
+												<h4>Omnimatte3D: Associating Objects and their Effects in Unconstrained Monocular Video</h4>
 												<a> Mohammed Suhail, Erika Lu, Zhengqi Li, Noah Snavely, Leonid Sigal, Forrester Cole</a><br>
 												<a>In CVPR 2023 </a>
 												<br>
-												[<a href="https://research.google/pubs/pub52233/">www</a>]
+												[<a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Suhail_Omnimatte3D_Associating_Objects_and_Their_Effects_in_Unconstrained_Monocular_Video_CVPR_2023_paper.pdf">www</a>]
 											</div>
 										</article>
-
 
 
 									<div class="features">
 										<article>
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
-											<source src="inz.mp4" type="video/mp4">
+											<source src="videos/inz.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
 											<div class="inner">
@@ -156,7 +169,7 @@
 										<article>
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
-											<source src="camel.mp4" type="video/mp4">
+											<source src="videos/camel.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
 											<div class="inner">
@@ -174,7 +187,7 @@
 										<article>
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
-											<source src="NR-W.mp4" type="video/mp4">
+											<source src="videos/NR-W.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
 											<div class="inner">
@@ -190,7 +203,7 @@
 										<article>
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
-											<source src="3DM.mp4" type="video/mp4">
+											<source src="videos/3DM.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
 											<div class="inner">
@@ -206,7 +219,7 @@
 										<article>
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
-											<source src="ds.mp4" type="video/mp4">
+											<source src="videos/ds.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
 											<div class="inner">
@@ -224,7 +237,7 @@
 											<!-- <a href="#" class="image"> -->
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
-											<source src="iron.mp4" type="video/mp4">
+											<source src="videos/iron.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
 
@@ -240,7 +253,7 @@
 
 
 										<article>
-											<a href="#" class="image"><img src="teaser.gif" alt="" /></a>
+											<a href="#" class="image"><img src="videos/teaser.gif" alt="" /></a>
 											<div class="inner">
 												<h4>Neural Scene Flow Fields for Space-Time View Synthesis of Dynamic Scenes</h4>
 												<a> Zhengqi Li, Simon Niklaus, Noah Snavely, Oliver Wang </a> <br>
