--- a/index.html
+++ b/index.html
@@ -89,6 +89,22 @@
 										<article>
 											<a href="#" class="image">
 											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/GID.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Generative Image Dynamics</h4>
+												<a> Zhengqi Li, Richard Tucker, Noah Snavely, Aleksander Holynski </a> <br>
+												<a>arXiv 2023</a>
+												<br>
+												[<a href="https://generative-dynamics.github.io/">www</a>]
+											</div>
+										</article>
+
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
 											<source src="videos/swing_tire.mp4" type="video/mp4">
 									        Your browser does not support the video tag.
           									</video></a>
