--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									</header>
 									<p>I am a research scientist at <a href="https://ai.google/">Google Research</a>. My research interests span 3D/4D computer vision, image-based rendering and computational photography, epsically for images and videos in the wild.
 
-									<br><br>I received my CS Ph.D. degree at Cornell University where I was advised by <a href="http://www.cs.cornell.edu/~snavely/"> Prof. Noah Snavely </a>.  I am a recipient of the <a href="https://youtu.be/wytULli6Xaw?t=1m40s">CVPR 2019 Best Paper Hornorable Mention</a>, <a href="https://research.google/outreach/phd-fellowship/recipients/">2020 Google Ph.D. Fellowship</a>, <a href="https://adoberesearch.ctlprojects.com/fellowship/previous-fellowship-award-winners/">2020 Adobe Research Fellowship</a>, <a href="https://mp.weixin.qq.com/s/v7ITiZXOJiDUbPlRlcqQRA">2021 Baidu Global Top 100 Chinese Rising Stars in AI</a>, and <a href="">CVPR 2023 Best Paper Honorable Mention Award</a>.
+									<br><br>I received my CS Ph.D. degree at Cornell University where I was advised by <a href="http://www.cs.cornell.edu/~snavely/"> Prof. Noah Snavely </a>.  I am a recipient of the <a href="https://youtu.be/wytULli6Xaw?t=1m40s">CVPR 2019 Best Paper Hornorable Mention</a>, <a href="https://research.google/outreach/phd-fellowship/recipients/">2020 Google Ph.D. Fellowship</a>, <a href="https://adoberesearch.ctlprojects.com/fellowship/previous-fellowship-award-winners/">2020 Adobe Research Fellowship</a>, <a href="https://mp.weixin.qq.com/s/v7ITiZXOJiDUbPlRlcqQRA">2021 Baidu Global Top 100 Chinese Rising Stars in AI</a>, <a href="https://cvpr2023.thecvf.com/Conferences/2023/Awards">CVPR 2023 Best Paper Honorable Mention</a>, <a href="">ICCV 2023 Best Student Paper Award</a>.
 
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 								</div>
@@ -63,8 +63,8 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
-								<li>One paper was accepted to ICCV, 2023 and selected as Oral Presentation.</li>
-								<li>Three paper was accepted to CVPR, 2023. DynIBaR was selected as Best Paper Honorable Mention</li>
+								<li>OmniMotion was accepted to ICCV, 2023 and selected as <b>Best Student Paper Award </b>.</li>
+								<li>Three paper was accepted to CVPR, 2023. DynIBaR was selected as  <b>Best Paper Honorable Mention </b></li>
 								<li>Two paper was accepted to ECCV, 2022. One of them was selected as Oral Presentation</strong></li>
 								<li>One paper was accepted to SIGGRAPH, 2022.</strong></li>
 								<li>Three paper were accepted to CVPR, 2022. Two of them were selected as Oral Presentation</strong></li>
@@ -74,7 +74,7 @@
 								<li>Our extended paper on learning depth of moving people was accepted to TPAMI.</li>
 								<li>I received 2020 Adobe Research Fellowship (10 selected worldwide). Thanks Adobe!</strong></li>
 								<li>Our paper on geometry aware camera orientation estimation was accepted to ICCV, 2019. </strong></li>
-								<li>Our paper on learning the depth of dynamic scene with moving people was accepted to CVPR, 2019 and was selected as Best Paper Honorable Mention</li>
+								<li>Our paper on learning the depth of dynamic scene with moving people was accepted to CVPR, 2019 and was selected as <b>Best Paper Honorable Mention</b></li>
 								<li>Our paper on learning intrinsic image decompostion from CGIntrinsics was accepted to ECCV, 2018.</li>
 								<li>Our paper on unsupervised learning intrinsic image decomposition was accepted to CVPR, 2018 and was selcted for a spolight oral.</li>
 								<li>Our paper on learning single-view depth prediction from Internet photos was accepted to CVPR, 2018</li>
@@ -111,7 +111,7 @@
 											<div class="inner">
 												<h4>Tracking Everything Everywhere All at Once</h4>
 												<a> Qianqian Wang, Yen-Yu Chang, Ruojin Cai, Zhengqi Li, Bharath Hariharan, Aleksander Holynski, Noah Snavely </a> <br>
-												<a>In ICCV 2023 (<b>Oral</b>)</a>
+												<a>In ICCV 2023 (<b>Best Student Paper Award</b>)</a>
 												<br>
 												<!-- [<a href="https://arxiv.org/abs/2205.12955">paper</a>] -->
 												[<a href="https://omnimotion.github.io/">www</a>]
