--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<span class="image avatar"><img src="images/zhengqi_3.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Zhengqi Li</a></h1>
 					<p>Research Scientist at Google Research<br />
-					Interested in 3D/4D vision</p>
+					<!-- Interested in 3D/4D vision</p> -->
 				</header>
 				<nav id="nav">
 					<ul>
@@ -53,12 +53,12 @@
 										<!-- <p>Just an incredibly simple responsive site<br /> -->
 										<!-- template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 									</header>
-									<p>I am a research scientist at <a href="https://ai.google/">Google Research</a>. My research interests span 3D/4D computer vision, image-based rendering and computational photography, epsically for images and videos in the wild.
-
-									<br><br>I received my CS Ph.D. degree at Cornell University where I was advised by <a href="http://www.cs.cornell.edu/~snavely/"> Prof. Noah Snavely </a>.  I am a recipient of the <a href="https://youtu.be/wytULli6Xaw?t=1m40s">CVPR 2019 Best Paper Hornorable Mention</a>, <a href="https://research.google/outreach/phd-fellowship/recipients/">2020 Google Ph.D. Fellowship</a>, <a href="https://adoberesearch.ctlprojects.com/fellowship/previous-fellowship-award-winners/">2020 Adobe Research Fellowship</a>, <a href="https://mp.weixin.qq.com/s/v7ITiZXOJiDUbPlRlcqQRA">2021 Baidu Global Top 100 Chinese Rising Stars in AI</a>, <a href="https://cvpr2023.thecvf.com/Conferences/2023/Awards">CVPR 2023 Best Paper Honorable Mention</a>, <a href="">ICCV 2023 Best Student Paper Award</a>.
-
+									<p>I am a research scientist at Google Research, where my interests lie in 3D/4D computer vision, computational photography, and image-based rendering.
+									<br> <br>
+									I earned my Ph.D. in computer science from Cornell University, where I was advised by <a href="http://www.cs.cornell.edu/~snavely/"> Professor Noah Snavely </a>. I have received several awards for my research, including the CVPR 2019 Best Paper Honorable Mention, the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Chinese Rising Stars in AI, the CVPR 2023 Best Paper Honorable Mention, and the ICCV 2023 Best Student Paper Award. </p>
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 								</div>
+
 							</section>
 							<section id="two">
 								<div class="container">
@@ -102,7 +102,7 @@
 											</div>
 										</article>
 
-									<div class="features">
+									<!-- <div class="features"> -->
 										<article>
 											<a href="#" class="image">
 											<video  width=90% height=90% muted autoplay loop>
@@ -119,7 +119,7 @@
 											</div>
 										</article>
 
-									<div class="features">
+									<!-- <div class="features"> -->
 										<article>
 											<a href="#" class="image">
 											<video  width=90% height=90% muted autoplay loop>
@@ -135,7 +135,7 @@
 											</div>
 										</article>
 
-									<div class="features">
+									<!-- <div class="features"> -->
 										<article>
 											<a href="#" class="image"><img src="images/omini3d.png" alt="" /></a>
 											<div class="inner">
@@ -148,7 +148,7 @@
 										</article>
 
 
-									<div class="features">
+									<!-- <div class="features"> -->
 										<article>
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
@@ -165,7 +165,7 @@
 											</div>
 										</article>
 
-									<div class="features">
+									<!-- <div class="features"> -->
 										<article>
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
@@ -183,7 +183,7 @@
 										</article>
 
 
-									<div class="features">
+									<!-- <div class="features"> -->
 										<article>
 											<a href="#" class="image">
 											<video  width=100% height=100% muted autoplay loop>
