--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
 										<!-- template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 									</header>
 									<p>I am a research scientist at Google Research, where my interests lie in 3D/4D computer vision, computational photography, and image-based rendering.
-									<br> <br>
-									I earned my Ph.D. in computer science from Cornell University, where I was advised by <a href="http://www.cs.cornell.edu/~snavely/"> Professor Noah Snavely </a>. I have received several awards for my research, including the CVPR 2019 Best Paper Honorable Mention, the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Chinese Rising Stars in AI, the CVPR 2023 Best Paper Honorable Mention, and the ICCV 2023 Best Student Paper Award. </p>
+									<br><br>
+									I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the CVPR 2019 Best Paper Honorable Mention, the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Chinese Rising Stars in AI, the CVPR 2023 Best Paper Honorable Mention, and the ICCV 2023 Best Student Paper Award. 
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
+									<!-- </p> -->
 								</div>
 
 							</section>
