--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 										<!-- <p>Just an incredibly simple responsive site<br /> -->
 										<!-- template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 									</header>
-									<p>I am a research scientist at Google Research, where my interests lie in 3D/4D computer vision, computational photography, and image-based rendering.
+									<p>I am a research scientist at Google Research, where my current interests lie in understanding, modeling and syntheszing our 3D and 4D world from images and videos.
 									<br><br>
-									I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the CVPR 2019 Best Paper Honorable Mention, the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Chinese Rising Stars in AI, the CVPR 2023 Best Paper Honorable Mention, and the ICCV 2023 Best Student Paper Award. 
+									I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the CVPR 2019 Best Paper Honorable Mention Award, the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Chinese Rising Stars in AI, the CVPR 2023 Best Paper Honorable Mention Award, and the ICCV 2023 Best Student Paper Award. 
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 									<!-- </p> -->
 								</div>
@@ -75,7 +75,7 @@
 								<li>Our extended paper on learning depth of moving people was accepted to TPAMI.</li>
 								<li>I received 2020 Adobe Research Fellowship (10 selected worldwide). Thanks Adobe!</strong></li>
 								<li>Our paper on geometry aware camera orientation estimation was accepted to ICCV, 2019. </strong></li>
-								<li>Our paper on learning the depth of dynamic scene with moving people was accepted to CVPR, 2019 and was selected as <b>Best Paper Honorable Mention</b></li>
+								<li>Our paper on learning the depth of dynamic scene with moving people was selected as CVPR 2019 <b>Best Paper Honorable Mention</b></li>
 								<li>Our paper on learning intrinsic image decompostion from CGIntrinsics was accepted to ECCV, 2018.</li>
 								<li>Our paper on unsupervised learning intrinsic image decomposition was accepted to CVPR, 2018 and was selcted for a spolight oral.</li>
 								<li>Our paper on learning single-view depth prediction from Internet photos was accepted to CVPR, 2018</li>
@@ -98,7 +98,6 @@
 												<a> Qianqian Wang, Yen-Yu Chang, Ruojin Cai, Zhengqi Li, Bharath Hariharan, Aleksander Holynski, Noah Snavely </a> <br>
 												<a>In ICCV 2023 (<b>Best Student Paper Award</b>)</a>
 												<br>
-												<!-- [<a href="https://arxiv.org/abs/2205.12955">paper</a>] -->
 												[<a href="https://omnimotion.github.io/">www</a>]
 											</div>
 										</article>
