--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<header>
 					<span class="image avatar"><img src="images/zhengqi_3.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Zhengqi Li</a></h1>
-					<p>Research Scientist at Google Research<br />
+					<p>Research Scientist at Google DeepMind<br />
 					<!-- Interested in 3D/4D vision</p> -->
 				</header>
 				<nav id="nav">
@@ -56,7 +56,7 @@
 									<!-- <p>I am a research scientist at Google Research, where my current interests lie in computer vision. -->
 									<!-- <br><br> -->
 									<p>
-									I am a research scientist at Google Research. I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the CVPR 2019 Best Paper Honorable Mention, the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Chinese Rising Stars in AI, the CVPR 2023 Best Paper Honorable Mention, and the ICCV 2023 Best Student Paper Award. </p>
+									I am a research scientist at Google DeepMind. I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Chinese Rising Stars in AI, the CVPR 2019 and CVPR 2023 Best Paper Honorable Mention Award, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Finalist </p>
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 									<!-- </p> -->
 								</div>
@@ -65,7 +65,7 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
-								<li>Generative Image Dynamics was accepted to CVPR, 2024 and selected as Oral </b>.</li>
+								<li>Generative Image Dynamics was accepted to CVPR, 2024 and selected as <b>Best Paper Finalist</b>.</li>
 								<li>OmniMotion was accepted to ICCV, 2023 and selected as <b>Best Student Paper Award </b>.</li>
 								<li>Three paper was accepted to CVPR, 2023. DynIBaR was selected as  <b>Best Paper Honorable Mention </b></li>
 								<li>Two paper was accepted to ECCV, 2022. One of them was selected as Oral Presentation</strong></li>
@@ -98,7 +98,7 @@
 											<div class="inner">
 												<h4>Generative Image Dynamics</h4>
 												<a> Zhengqi Li, Richard Tucker, Noah Snavely, Aleksander Holynski</a> <br>
-												<a>In CVPR 2024 (<b>Oral</b>)</a>
+												<a>In CVPR 2024 (<b>Best Paper Finalist</b>)</a>
 												<br>
 												[<a href="https://generative-dynamics.github.io/">www</a>]
 											</div>
